# necoplot

./: .gitignore  LICENSE  README.md  pyproject.toml
necoplot/: __init__.py  common.py  config.py  core_plot.py  extract_params.py  main.py  multi_plot.py  plot_base.py  single_plot.py  slope_plot.py
tests/: test_plot.py
